--- a/mulai.html
+++ b/mulai.html
@@ -22,6 +22,6 @@
             //sesi Work
             <div id="sessionType" class="session-type">Work Time</div>
         </div>
-        <script src="stylenya.css"></script>
+        <script src="stylenya.js"></script>
     </body>
 </html>
